--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "@storybook/test-runner": "^0.9.2",
     "@storybook/testing-library": "^0.0.13",
     "babel-plugin-named-exports-order": "^0.0.2",
+    "chromatic": "^6.14.0",
     "msw": "^0.42.0",
     "msw-storybook-addon": "^1.6.3",
     "prettier": "2.8.1",
